app/assets/stylesheets/timer.scss
/* refactor later */
.none {
  display: none; }

#timer-bar {
  height: 30px;
  color: white;

  #task-title {
    color: white;
    float: left;
    padding-top: 5px;
    padding-left: 10px;
    font-size: 14px;
    font-weight: normal; }

  #timer-ui {
    float: right;
    font-weight: normal;

    img#pin-btn {
      padding-top: 5px; }

    #timer-buttons {
      display:inline-block;
      vertical-align:top;
      padding-top:7px; }

    #duration-display {
      display:inline-block;
      vertical-align:top; }

    #worklog-property ul {
      position: absolute;
      width: 110px;
      z-index: 100;
      top: 14px;
      left: 0; }

    // we have to override overly broad selectors in _old.scss
    img {
      float: none;
      border-top: 0px;
      margin: 0px;
      padding: 0px;
      clear: none;

      &#play-btn {
        display: none; } } } }


#save-ui {
  clear: both;
  position: relative;
  float: left;

  #save-btn {
    float: none; }

  #save-dropdown {
    position: absolute;
    top: 30px;
    left: 30px; 

    ul {
      width: 110px; } } }

#worktime_container {
  display: none; }

